# dsaa-assignment3-colab

./: .gitignore  README.md  pyproject.toml
artifacts/augmentation/: candidate_pairs.jsonl  generated_examples.json
artifacts/backward_model/: adapter_config.json  adapter_model.safetensors  eval_metrics.json  runtime_summary.json  train_metrics.json
artifacts/backward_model/checkpoint-600/: adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
artifacts/backward_model/checkpoint-604/: README.md  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
artifacts/curation/: curated_pairs.jsonl  curated_pairs_score4plus.jsonl  curated_pairs_score4plus_metadata.json  high_quality_examples.json  low_quality_examples.json  rejected_pairs.jsonl  selection_metadata.json
artifacts/final_model_best/: adapter_config.json  adapter_model.safetensors  demo_generations.json  eval_metrics.json  train_metrics.json
artifacts/final_model_best/checkpoint-10/: adapter_config.json  adapter_model.safetensors  (+4 more)
configs/: augmentation.json  augmentation_server.json  backward_train.json  backward_train_server.json  curation.json  curation_server.json  forward_train.json  forward_train_server.json  forward_train_server_best.json
notebooks/: COLAB_RUNBOOK.md  assignment3_colab.ipynb
scripts/: curate_dataset.py  generate_instructions.py  train_backward.py  train_forward.py
src/assignment3/: __init__.py  bootstrap.py  data.py  inference.py  models.py  prompts.py  runtime.py  training.py
(+9 files in other folders)
